# javel

./: .gitignore  .travis.yml  LICENSE  README  README.md  meson.build  meson_options.txt
common/: common.h  logging.h  util.c  util.h
include/: cat-file.h  checkout.h  commit.h  hash-file.h  init.h  log.h  ls-tree.h  ls_files.h  show.h  status.h
lib/: cat-file.c  checkout.c  commit-object.c  commit-object.h  commit.c  config.c  config.h  hash-file.c  hash-file.h  index.c  index.h  init.c  log.c  ls-tree.c  ls_files.c  meson.build  object.c  object.h  sha1.c  sha1.h  show.c  status.c  tree-object.c  tree-object.h  util.c  util.h
src/: javel.c  meson.build
tests/: commit-object_test.c  meson.build  object_test.c  test.h  tree-object_test.c  util_test.c
tests/component-tests/: commit-test.py  hash-file-test.py  init-test.py  jvl_test.py  ls-files-test.py  meson.build  status-test.py
tests/unit-tests/: commit-object_test.c  index_test.c  meson.build  object_test.c  test.h  tree-object_test.c  util_test.c
